--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
+    "react-fade-in": "^2.0.1",
     "react-modal-image": "^2.5.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
