--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-fade-in": "^2.0.1",
     "react-modal-image": "^2.5.0",
+    "react-responsive-gallery": "^1.2.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
