--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "animate.css": "^4.1.1",
     "fslightbox-react": "file:fslightbox-react-pro-1.4.2.tgz",
     "google-map-react": "^2.1.9",
     "react": "^17.0.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-fade-in": "^2.0.1",
