--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-fade-in": "^2.0.1",
+    "react-helmet": "^6.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
